category and product offer admin CRUD Done

--- a/store/templates/store/userdashboard/preview.html
+++ b/store/templates/store/userdashboard/preview.html
@@ -88,7 +88,7 @@
                             </h4>
 
                             <span id="offer_price" class="mtext-106 cl2">
-                                {{pdtobj.price}}
+                                Rs.{{pdtobj.price}}
                             </span>
 
                             <p class="stext-102 cl3 p-t-23">
