--- a/store/templates/store/userdashboard/userprofile.html
+++ b/store/templates/store/userdashboard/userprofile.html
@@ -254,7 +254,7 @@
                           {% for item in orderobjs %}
                           <tr>
                             <td>{{ item.product.name }}</td>
-                            <td>{{ item.product.price }}</td>
+                            <td>{{ item.finalprice }}</td>
                             <td>{{ item.quantity }}</td>
                             <td>{{ item.orderdate }}</td>
                             <td>{{ item.orderstatus }}</td>
