--- a/storeadmin/templates/storeadmin/index.html
+++ b/storeadmin/templates/storeadmin/index.html
@@ -361,6 +361,22 @@
             </a>
             
           </li>
+          <li class="nav-item">
+            <a class="nav-link"  href={% url 'categoryoffer' %} aria-expanded="false" aria-controls="charts">
+              <i class="icon-bar-graph menu-icon"></i>
+              <span class="menu-title">Category Offer</span>
+              <i class="menu-arrow"></i>
+            </a>
+            
+          </li>
+          <li class="nav-item">
+            <a class="nav-link"  href={% url 'productoffer' %} aria-expanded="false" aria-controls="charts">
+              <i class="icon-bar-graph menu-icon"></i>
+              <span class="menu-title">Product Offer</span>
+              <i class="menu-arrow"></i>
+            </a>
+            
+          </li>
         </ul>
       </nav> 
       {% block content %}
