magic zoom implemented

--- a/store/templates/store/userdashboard/loggedin.html
+++ b/store/templates/store/userdashboard/loggedin.html
@@ -31,6 +31,7 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'store/vendor/MagnificPopup/magnific-popup.css' %}">
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="{% static 'store/vendor/perfect-scrollbar/perfect-scrollbar.css' %}">
+	<link rel="stylesheet" href="{% static 'store/static/store/magiczoom/magiczoom.css' %}">
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="{% static 'store/css/util.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'store/css/main.css' %}">
@@ -1242,6 +1243,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <!--===============================================================================================-->
 	<script src="{% static 'store/vendor/slick/slick.min.js' %}"></script>
 	<script src="{% static 'store/js/slick-custom.js' %}"></script>
+	<script src="{% static 'store/static/store/magiczoom/magiczoom.js' %}"></script>
 <!--===============================================================================================-->
 	<script src="{% static 'store/vendor/parallax100/parallax100.js' %}"	></script>
 	<script>
