Return Product Done

--- a/store/templates/store/userdashboard/userprofile.html
+++ b/store/templates/store/userdashboard/userprofile.html
@@ -287,6 +287,9 @@
                     
             
                 </div>
+                <div>
+                  <a href={% url 'deliveredproducts' %}>Delivered Products</a>
+                </div>
                 
             </div>
 
