--- a/storeadmin/templates/storeadmin/orders/editorderstatus.html
+++ b/storeadmin/templates/storeadmin/orders/editorderstatus.html
@@ -13,6 +13,7 @@
         <option value="Ordered" {% if item.orderstatus == "Ordered" %}selected{% endif %}>Ordered</option>
         <option value="Cancelled" {% if item.orderstatus == "Cancelled" %}selected{% endif %}>Cancelled</option>
         <option value="Shipped" {% if item.orderstatus == "Shipped" %}selected{% endif %}>Shipped</option>
+        <option value="Delivered" {% if item.orderstatus == "Delivered" %}selected{% endif %}>Delivered</option>
     </select>
     </div>
     <button type="submit" class="btn btn-primary mt-4">Update</button>
