--- a/store/templates/store/userdashboard/loggedin.html
+++ b/store/templates/store/userdashboard/loggedin.html
@@ -35,7 +35,7 @@
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="{% static 'store/css/util.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'store/css/main.css' %}">
-
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
 	{% comment %} bootstrap js cdn {% endcomment %}
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -139,25 +139,36 @@
 							<i class="zmdi zmdi-search"></i>
 						</div>
 
-						<div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart" data-notify="2">
+						<div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart" data-notify="7">
 							<i class="zmdi zmdi-shopping-cart"></i>
 						</div>
 
-						<a href="#" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" data-notify="0">
+						<a href="#" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" data-notify="3">
 							<i class="zmdi zmdi-favorite-outline"></i>
 						</a>
-                        <a href={% url 'logout' %}>
-                            <button class="flex-c-m stext-101 cl0 size-103 bg1 bor1 hov-btn2 p-lr-15 trans-04 bg-danger">
-                                Logout
-                            </button>
+        
+	
 
-                        </a>
-						<a href={% url 'userprofile' %}>
-                            <button class="flex-c-m stext-101 cl0 size-103 bg1 bor1 hov-btn2 p-lr-15 trans-04 bg-danger">
-                                User
-                            </button>
+						<div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 " >
+							<a style="color: inherit;
+							text-decoration: none;" class="text-decoration-none custom-link-color" href={% url 'userprofile' %}>
 
-                        </a>
+								<i class="zmdi zmdi-account-circle"></i>
+
+							</a>
+						</div>
+						<div class="ml-4">
+							<a href={% url 'logout' %}>
+								<button class="btn btn-danger">
+									Logout
+								</button>
+	
+							</a>
+
+						</div>
+						
+
+						
 				
 
 
@@ -501,8 +512,11 @@
 					{% for catoffer in categoryofferobjs   %}
 
 					{% if catoffer.category == item %}
-
-					<span class="text-success"> {{catoffer.offer_description}} AVAILABLE</span>
+					<h6 class="stext-301 cl0 p-b-30">
+						<span class="text-dark"> <i class="fas fa-tag text-success"></i> {{catoffer.offer_description}} AVAILABLE</span>
+					</h6>
+					
+					
 					
 					
 					{% endif %}
@@ -1028,23 +1042,23 @@
 			<div class="p-t-40">
 				<div class="flex-c-m flex-w p-b-18">
 					<a href="#" class="m-all-1">
-						<img src="images/icons/icon-pay-01.png" alt="ICON-PAY">
+						<img src={% static 'store/images/icons/icon-pay-01.png' %} alt="ICON-PAY">
 					</a>
 
 					<a href="#" class="m-all-1">
-						<img src="images/icons/icon-pay-02.png" alt="ICON-PAY">
+						<img src={% static 'store/images/icons/icon-pay-02.png' %}	 alt="ICON-PAY">
 					</a>
 
 					<a href="#" class="m-all-1">
-						<img src="images/icons/icon-pay-03.png" alt="ICON-PAY">
+						<img src={% static 'store/images/icons/icon-pay-03.png' %}	 alt="ICON-PAY">
 					</a>
 
 					<a href="#" class="m-all-1">
-						<img src="images/icons/icon-pay-04.png" alt="ICON-PAY">
+						<img src={% static 'store/images/icons/icon-pay-04.png' %}	 alt="ICON-PAY">
 					</a>
 
 					<a href="#" class="m-all-1">
-						<img src="images/icons/icon-pay-05.png" alt="ICON-PAY">
+						<img src={% static 'store/images/icons/icon-pay-05.png' %}	 alt="ICON-PAY">
 					</a>
 				</div>
 
