--- a/store/templates/store/userdashboard/preview.html
+++ b/store/templates/store/userdashboard/preview.html
@@ -108,7 +108,7 @@
                             
                             <!--  -->
                             <div class="p-t-33">
-                                <div class="flex-w flex-r-m p-b-10">
+                                {% comment %} <div class="flex-w flex-r-m p-b-10">
                                     <div class="size-203 flex-c-m respon6">
                                         Size
                                     </div>
@@ -144,8 +144,11 @@
                                             <div class="dropDownSelect2"></div>
                                         </div>
                                     </div>
-                                </div>
-
+                                </div> {% endcomment %}
+                                
+                                {% if categoryfound == True or productfound == True  %}
+                                
+                                <h4 class="stext-301 ">Select Offer</h4>
 
                                 <form method="POST" action="">
                                     {% csrf_token %}
@@ -211,7 +214,7 @@
                                 {% if productfound == True %}
                                 <div class="flex-w flex-r-m p-b-10">
                                     <div class="size-203 flex-c-m respon6">
-                                        Offer
+                                        Product Offer
                                     </div>
                                 
                                     
@@ -241,11 +244,16 @@
 
                                 {% comment %} Product Offer Select Tag Ends {% endcomment %}
                                 {% if productfound or categoryfound %}
-                                <button name="addoffer" type="submit" id="offerclick" class="flex-c-m stext-101 cl0 btn bg1 bor1 hov-btn1 p-lr-15 trans-04  mt-2">Add Offer</button>
+                                <div class="row justify-content-end">
+                                    <button name="addoffer" type="submit" id="offerclick" class=" flex-c-m stext-101 cl0 btn bg1 bor1 hov-btn1 p-lr-15 trans-04  mt-2">Add Offer</button>
+
+                                </div>
+          
+                                
                                 {% endif %}
                                 </form>
 
-
+                                {% endif %}
 
                                 <div>
                                     {% if offer %}
