Pie chart and bar chart done

--- a/store/templates/store/userdashboard/checkout.html
+++ b/store/templates/store/userdashboard/checkout.html
@@ -232,6 +232,9 @@
 
 			<button type="submit"   class="btn btn-success" id="rzp-button1">Pay with Razorpay</button>
 
+			{{order_id}}
+			{{amount}}
+
 			
 
 
