--- a/store/templates/store/verifyotp.html
+++ b/store/templates/store/verifyotp.html
@@ -1,10 +1,14 @@
 {% extends 'store/login.html' %}
 
 {% block content %}
-<div>
-    {{msg}}
-</div>
+
 <div class="container">
+    <br><br><br>
+    <div class="row mt-5 text-success justify-content-center">
+        
+            {{msg}}
+        
+    </div>
     <div class="row justify-content-center mt-5">
         <div class="col-md-6">
             <div class="card">
