--- a/storeadmin/templates/storeadmin/salesreport.html
+++ b/storeadmin/templates/storeadmin/salesreport.html
@@ -2,23 +2,93 @@
 
 {% block content %}
 
-<div class="-col-md-5 ml-5 mt-4">
-    <form action={% url 'downloadsales' %} method="GET">
-        <label for="start_date">Start Date:</label>
-        <input type="date" id="start_date" name="start_date" required>
-        <br>
-        <label for="end_date">End Date:</label>
-        <input type="date" id="end_date" name="end_date" required>
-        <br>
-       
-        <button type="submit">Download Sales Report</button>
 
 
-  
-        
-    </form>
+<div class="container-fluid">
+    <div class="row justify-content-center mt-4">
+        <h4>
+            Sales Report
+        </h4>
+    </div>
+    <div class="row">
+        <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>Product</th>
+                <th>Ordered By</th>
+                <th>Payment Type</th>
+                <th>Quantity</th>
+                <th>Date</th>
+                <th>Status</th>
+                <th>Address</th>
+                
+            
+              </tr>
+            </thead>
+            <tbody>
+              {% for item in orderobjs %}
+              <tr>
+                <td>{{ item.product.name }}</td>
+                <td>{{ item.user.name }}</td>
+                <td>{{ item.ordertype }}</td>
+                <td>{{ item.quantity }}</td>
+                <td>{{ item.orderdate }}</td>
+                <td>{{ item.orderstatus }}</td>
+                <td>{{ item.address.house }} ,{{ item.address.locality }}</td>
+                
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
 
+    </div>
+
+
+    <div class="row mt-5">
+        <h4>
+            Download Sales Report
+        </h4>
+    </div>
+
+    <div class="row mt-2">
+        <form action={% url 'downloadsales' %} method="GET">
+            <label for="start_date">Start Date:</label>
+            <input type="date" id="start_date" name="start_date" required>
+            <br>
+            <label for="end_date">End Date:</label>
+            <input type="date" id="end_date" name="end_date" required>
+            <br>
+           
+     
+    
+            <div class="row justify-content-end">
+                
+                <button  type="submit" class="btn add-product-btn btn-primary mt-2">Download</button>
+                
+              </div>
+      
+            
+        </form>
+
+    </div>
+    <br><br><br><br>
 </div>
+
+ 
+
+        
+   
+
+
+
+
+
+
+
+{% comment %} <div class="-col-md-5 ml-5 mt-4">
+    
+
+</div> {% endcomment %}
 
 
 
