--- a/storeadmin/templates/storeadmin/categoryoffer/categoryoffer.html
+++ b/storeadmin/templates/storeadmin/categoryoffer/categoryoffer.html
@@ -5,7 +5,7 @@
 
 <div class="container">
   <div class="row justify-content-end">
-    <a href="{% url 'admin_addcategories' %}">
+    <a href="{% url 'addcategoryoffer' %}">
       <button class="btn add-category-btn btn-primary mt-2">Add Category</button>
     </a>
   </div>
