--- a/storeadmin/templates/storeadmin/productoffer/productoffer.html
+++ b/storeadmin/templates/storeadmin/productoffer/productoffer.html
@@ -5,8 +5,8 @@
 
 <div class="container">
   <div class="row justify-content-end">
-    <a href="{% url 'admin_addcategories' %}">
-      <button class="btn add-category-btn btn-primary mt-2">Add Category</button>
+    <a href="{% url 'addproductoffer' %}">
+      <button class="btn add-category-btn btn-primary mt-2">Add Product Offer</button>
     </a>
   </div>
   <div class="row">
