--- a/store/templates/store/userdashboard/checkout.html
+++ b/store/templates/store/userdashboard/checkout.html
@@ -177,17 +177,18 @@
 				</div>
 				<form method="POST" action=""> 
 					{% csrf_token %}
-					<div class="col-md-8">
+					 <div class="col-md-8">
 						<select name="coupon_select" id="coupon_select">
 							{% for coupon in couponobjs  %}						
 							<option id="couponid" data-category-id="{{coupon.id}}" value="{{coupon.code}}">{{coupon.code}}</option>
-							{% endfor %}
-		
-		
-						</select>
-	
-					</div>
-					<button type="submit" name="couponform" class="btn btn-primary" id="apply_coupon">Apply Coupon</button>
+							{% endfor %}				
+						</select>	
+					</div> 
+					 <button type="submit" name="couponform" class="btn btn-primary" id="apply_coupon">Apply Coupon</button> 
+
+
+					
+
 
 
 
@@ -216,10 +217,12 @@
 		
 				</select> 
 				<div class="row mt-5">
-					<button type="submit" name="action" value="cashondelivery" class="btn btn-primary">Cash On Delivery</button>
+					<button type="submit" name="cashondeliverybutton" value="cashondelivery" class="btn btn-primary">Cash On Delivery</button>
 					{% comment %} <button type="submit" name="action" value="razorpay"  class="btn btn-success" id="rzp-button1">Pay with Razorpay</button> {% endcomment %}
 				</div>
-				
+				<div>
+					<button name="razorpaybutton" type="submit"   class="btn btn-success" id="rzp-button1">Pay with Razorpay</button>
+				</div>
 
 				
 				
@@ -230,7 +233,7 @@
 
 
 
-			<button type="submit"   class="btn btn-success" id="rzp-button1">Pay with Razorpay</button>
+			
 
 			{{order_id}}
 			{{amount}}
