--- a/storeadmin/templates/storeadmin/products/addproducts.html
+++ b/storeadmin/templates/storeadmin/products/addproducts.html
@@ -5,16 +5,25 @@
     <div class="form-group mt-2">
       {% comment %} {% for item in content  %} {% endcomment %}
       <label for="username">Name</label>
-      <input value="" name="name" type="text" class="form-control" id="username" placeholder="Enter productname">
+      <input value="{{name}}" name="name" type="text" class="form-control" id="username" placeholder="Enter productname">
+      {% if error and "name" in error %}
+      <span style="color: red">{{error.name}}</span>
+      {% endif %}
     </div>
     <div class="form-group mt-2">
       <label for="email">Price</label>
-      <input value="" name="price" type="text" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter price">
-      {% comment %} <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> {% endcomment %}
+      <input value="{{price}}" name="price" type="text" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter price">
+      
+      {% if error and "price" in error %}
+      <span style="color: red">{{error.price}}</span>
+      {% endif %}{% comment %} <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> {% endcomment %}
     </div>
     <div class="form-group mt-2">
       <label for="inputPassword">Quantity</label>
-      <input  value=""  name="quantity" type="text" class="form-control" id="inputPassword" placeholder="Enter Quantity">
+      
+      {% if error and "quantity" in error %}
+      <span style="color: red">{{error.quantity}}</span>
+      {% endif %}<input  value="{{quantity}}"  name="quantity" type="text" class="form-control" id="inputPassword" placeholder="Enter Quantity">
     </div>
     <div class="form-group mt-2">
       <label for="inputPassword">Category</label>
@@ -28,7 +37,10 @@
     </div>
     <div class="form-group mt-2">
         <label for="inputConfirmPassword">Description </label>
-        <input value=""  name="description" type="text" class="form-control" id="inputConfirmPassword" placeholder="Description">
+        
+        {% if error and "description" in error %}
+        <span style="color: red">{{error.description}}</span>
+        {% endif %}<input value="{{description}}"  name="description" type="text" class="form-control" id="inputConfirmPassword" placeholder="Description">
     </div>
 
     {% comment %} ARUN'S CODE {% endcomment %}
@@ -71,7 +83,7 @@
 
 
     <button type="submit" class="btn btn-primary mt-4">Add Product</button>
-    <h5>{{successmsg}} {{error}}</h5>
+    <h5>{{successmsg}} </h5>
     {% comment %} {% endfor %} {% endcomment %}
   
   </form>
