--- a/store/templates/store/userdashboard/loggedincart.html
+++ b/store/templates/store/userdashboard/loggedincart.html
@@ -4,10 +4,17 @@
 
 
 {% block content %}
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <div class="row mt-5"></div>
 <div class="row mt-5"></div>
 <div class="row mt-5"></div>
 <div class="row mt-5"></div>
+<div id="result">
+	<h5>
+		DEYYYY
+	</h5>
+
+</div>
 <div class="container-fluid">
     <div class="row">
         <!-- Shoping Cart -->
@@ -17,113 +24,38 @@
 				<div class="col-lg-10 col-xl-7 m-lr-auto m-b-50">
 					<div class="m-l-25 m-r--38 m-lr-0-xl">
 						<div class="wrap-table-shopping-cart">
-							<table class="table-shopping-cart">
-								<tr class="table_head">
-									<th class="column-1">Product</th>
-									<th class="column-2">Name</th>
-									<th class="column-3">Price</th>
-									<th class="column-4">Total</th>
-									<th class="column-5 ">Quantity</th>
-									
-								</tr>
-								<div id="cart-content">
-
-									{% for item in cartobjs  %}
-									<tr id="cartitem{{item.id}}" class="table_row">
-										<td class="column-1">
-											<div class="how-itemcart1">
-												<img src='{{item.product.image1.url}}' alt="IMG">
-											</div>
-										</td>
-										<td class="column-2">{{item.product.name}}</td>
-										<td class="column-3">{{item.product.price}}</td>
-										
-										<td class="column-4">{{item.total}}</td>
-
-										<td class="column-5 ">
-
-											{% comment %} {{item.quantity}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {% endcomment %}
-
-											
-
-												<form class="ml-5" method="POST" action="{% url 'updatecart' item.id %}">
-													{% csrf_token %}
-													<div class="row mt-3"></div>
-													<div class="row mt-3"></div>
-													<div class="row mt-3"></div>
-													<div class="mt-5">
 
 
-														<div class="wrap-num-product flex-w m-r-20 m-tb-10 ml-5 ">
-															<div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
-																<i class="fs-16 zmdi zmdi-minus"></i>
-															</div>
-															
-															<input class="increasequantity mtext-104 cl3 txt-center num-product" type="number" name="quantity" data-category-id="{{ item.id }}" value={{item.quantity}}>
-															{% comment %} <button  class="btn delete-btn btn-danger" data-category-id="{{ item.id }}">Delete</button>  {% endcomment %}
+							<table class="table table-striped">
+								<thead>
+								  <tr>
+									<th>Product</th>
+									<th>Name</th>
+									<th>Price</th>
+									<th>Quantity</th>
+									<th>Total</th>
+								  </tr>
+								</thead>
+								<tbody>
+								  {% for item in cartobjs %}
+								  <tr>
+									<td>
+									  <img class="img-fluid img-responsive" src="{{ item.product.image1.url }}" alt="Product Image">
+									</td>
+									<td>{{ item.product.name }}</td>
+									<td><div id="productamount">{{ item.product.price }}</div></td>
+
 				
-															<div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
-																<i class="fs-16 zmdi zmdi-plus"></i>
-															</div>
-														</div>
-
-													</div>
-		
-													
-
-													<div>
-														<button   type="submit" class="btn  btn-danger mt-5" >Update Cart</button>
-
-													</div>
-			
-						
-													
-						
-						
-												</form>
-												<br><br>
-												<div >
-
-													<button  class=" btn delete-btn btn-danger cartitem-delete-btn" data-category-id="{{ item.id }}">Remove Item</button>   
-
-												</div>
-
-											
-
-											
-					
-											
-					
-											
-											
-											
-											
-					
-											
-
-											{% comment %} <div class="wrap-num-product flex-w m-l-auto m-r-0">
-												<div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
-													<i class="fs-16 zmdi zmdi-minus"></i>
-												</div>
-
-												<input class="mtext-104 cl3 txt-center num-product" type="number" name="num-product1" value="1">
-
-												<div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
-													<i class="fs-16 zmdi zmdi-plus"></i>
-												</div>
-											</div> {% endcomment %}
-										</td>
-				
-									</tr>
-									{% endfor %}
-
-								</div>
-                                
-
-								
-							</table>
+									<td>
+									  <input class="choosequantity" type="number" min="1" value="{{ item.quantity }}" name="quantity" data-item-id="{{ item.id }}">
+									</td>
+									<td><div id="amount{{item.id}}">{{ item.total }}</div></td>
+								  </tr>
+								  {% endfor %}
+								</tbody>
+							  </table>
 						</div>
-						
+
 						
 						{% if cartobjs %}
 
@@ -134,18 +66,8 @@
 						
 						</div>
 
-					
-						{% comment %} <div class="mt-5">
-							
-							<button  type="button" class="btn update-btn btn-danger" >Update Cart</button>
-						
-						
-						</div> {% endcomment %}
 
-						
-						
-						
-						
+
 						
 						{% endif %}
 
@@ -163,22 +85,6 @@
 						
 
 
-
-						{% comment %} Coupon And Update Cart {% endcomment %}
-
-						{% comment %} <div class="flex-w flex-sb-m bor15 p-t-18 p-b-15 p-lr-40 p-lr-15-sm">
-							<div class="flex-w flex-m m-r-20 m-tb-5">
-								<input class="stext-104 cl2 plh4 size-117 bor13 p-lr-20 m-r-10 m-tb-5" type="text" name="coupon" placeholder="Coupon Code">
-									
-								<div class="flex-c-m stext-101 cl2 size-118 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer m-tb-5">
-									Apply coupon
-								</div>
-							</div>
-
-							<div class="flex-c-m stext-101 cl2 size-119 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer m-tb-10">
-								Update Cart
-							</div>
-						</div> {% endcomment %}
 
 
 
@@ -199,55 +105,13 @@
 							</div>
 
 							<div class="size-209">
-								<span class="mtext-110 cl2">
+								<span class="subtotal mtext-110 cl2">
 									{{totalsum}}
 								</span>
 							</div>
 						</div>
 
-						{% comment %} <div class="flex-w flex-t bor12 p-t-15 p-b-30">
-							<div class="size-208 w-full-ssm">
-								<span class="stext-110 cl2">
-									Shipping:
-								</span>
-							</div>
-
-							<div class="size-209 p-r-18 p-r-0-sm w-full-ssm">
-								<p class="stext-111 cl6 p-t-2">
-									There are no shipping methods available. Please double check your address, or contact us if you need any help.
-								</p>
-								
-								<div class="p-t-15">
-									<span class="stext-112 cl8">
-										Calculate Shipping
-									</span>
-
-									<div class="rs1-select2 rs2-select2 bor8 bg0 m-b-12 m-t-9">
-										<select class="js-select2" name="time">
-											<option>Select a country...</option>
-											<option>USA</option>
-											<option>UK</option>
-										</select>
-										<div class="dropDownSelect2"></div>
-									</div>
-
-									<div class="bor8 bg0 m-b-12">
-										<input class="stext-111 cl8 plh3 size-111 p-lr-15" type="text" name="state" placeholder="State /  country">
-									</div>
-
-									<div class="bor8 bg0 m-b-22">
-										<input class="stext-111 cl8 plh3 size-111 p-lr-15" type="text" name="postcode" placeholder="Postcode / Zip">
-									</div>
-									
-									<div class="flex-w">
-										<div class="flex-c-m stext-101 cl2 size-115 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer">
-											Update Totals
-										</div>
-									</div>
-										
-								</div>
-							</div>
-						</div> {% endcomment %}
+						
 
 						<div class="flex-w flex-t p-t-27 p-b-33">
 							<div class="size-208">
@@ -257,7 +121,7 @@
 							</div>
 
 							<div class="size-209 p-t-1">
-								<span class="mtext-110 cl2">
+								<span class="subtotal mtext-110 cl2">
 									RS.{{totalsum}}
 								</span>
 							</div>
@@ -298,62 +162,63 @@
 
 
 
+
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 <script>
-
-  {% comment %} $(".delete-categ").click(function(e) {
-	  e.preventDefault()
-    var someid  = $(this).data("category-id");
-    if (confirm("Are you sure you want to delete all items in the cart?")) {
-        
-        $.ajax({
-            url: "/deletecart/" ,
-            type: "GET",
-            beforeSend: function(xhr) {
-              xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}");
-            },
-            success: function(response) {
-                alert(response.message);
-                location.reload();
-            },
-            error: function(xhr, status, error) {
-                alert("Error: " + error);
-            }
-        });
-    }
-});   {% endcomment %}
+	$(".choosequantity").change(function(){
+		var itemid=$(this).data("item-id");
+		var quantity=$(this).val();
 
 
+		$.ajax({
+			url:"/quantityupdate/",
+			type:"GET",
+			data:{
+				itemid:itemid,
+				quantity:quantity
+			},
+			success:function(response){
+				var result=response.sum;
+				var subtotal=response.subtotal;
+				$("#amount"+itemid).html(result);
+				$(".subtotal").html(subtotal)
+			
+				
 
-{% comment %} $(".delete-btn").click(function() {
-    //var someid = $(this).data("category-id");
-    if (confirm("Are you sure you want to delete all items in cart?")) {
-        
-        $.ajax({
-            url: "/deletecart/" ,
-            type: "GET",
-            beforeSend: function(xhr) {
-              xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}");
-            },
-            success: function(response) {
-                //alert(response.message);
-                location.reload(true);
-				//$("#cart-content").empty();
-				//$("#cart-content").html(response.message);
-				console.log(response.message);
-            },
-            error: function(xhr, status, error) {
-                alert("Error: " + error);
-            }
-        });
-    }
-});   {% endcomment %}
+			},
+			error: function(xhr, errmsg, err) {
+				
+				console.log(xhr.status + ": " + xhr.responseText);
+			  }
 
 
 
 
-//REMOVE SINGLE ITEM FROM CART
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+		})
+
+
+
+	})
+
+
+
+
+
+
+</script>
+
+
+
+
+
+
+
+
+
+
  <script>
   $(document).ready(function() {
       $(".cartitem-delete-btn").click(function() {
@@ -385,75 +250,7 @@
     });
   </script>
 
-
-{% comment %} $(".update-btn").click(function() {
-    var someid = $(this).data("category-id");
-	var data = {
-        // Add your data properties here
-        key1: value1,
-        key2: value2,
-        // ...
-    };
-    if (confirm("Are you sure you want to update the cart?")) {
-        
-        $.ajax({
-            url: "/updatecart/"+ someid ,
-            type: "GET",
-            beforeSend: function(xhr) {
-              xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}");
-            },
-            success: function(response) {
-                alert(response.message);
-                location.reload();
-            },
-            error: function(xhr, status, error) {
-                alert("Error: " + error);
-            }
-        }); 
-    }
-});   {% endcomment %}
-{% comment %} </script> {% endcomment %}
-
-{% comment %} INCREASE QUANTITY OF ITEM IN CART {% endcomment %}
-{% comment %} <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
- <script>
-  $(document).ready(function() {
-      $(".increasequantity").click(function() {
-        var itemid = $(this).data("category-id");
-		//var quantityInput = document.querySelector('input[data-category-id="' + itemid + '"]');
-          // Get the selected offer value
-        
-        // Send an AJAX request to update the offer price
-        $.ajax({
-          url: "../increasequantity/" + itemid, // Replace with the URL of your Django view
-          type: "GET",
-          data: { offer: itemid,
-			//updatedquantity:quantityInput,
-
-                  
-                  
-              },
-          success: function(response) {
-            $("#offer" + itemid).remove();
-            // Update the offer price on the page
-            var newOfferPrice = response.message;  // Assuming the response contains the updated offer price
-            // Update the appropriate HTML element with the new offer price
-            //$("#offer_price").text(newOfferPrice);
-            alert(response.message);
-          },
-          error: function(xhr, errmsg, err) {
-            // Handle any errors that occur during the AJAX request
-            console.log(xhr.status + ": " + xhr.responseText);
-          }
-        });
-      });
-    });
-  </script> {% endcomment %}
-
-
-
-
-
+   
 
 
 {% endblock content %}
